Minor color changes, fixed some layout issues

--- a/public/main.css
+++ b/public/main.css
@@ -3,7 +3,7 @@ body, html {
 }
 
 #header {
-  background-color: #272727;
+  background-color: #222222;
 }
 
 #menu {
@@ -36,12 +36,13 @@ body, html {
 
 #logo {
   font-size: 32pt;
+  min-width: 200px;
 }
 
 #search input {
   height: 32px;
-  width: 350px;
-  color: #000000;
+  width: 300px;
+  color: #222222;
   padding: 3px;
   border-radius: 0;
   border: 0;
@@ -51,15 +52,19 @@ body, html {
 }
 
 #search button {
+  margin-right: 10px;
   vertical-align: middle;
-  font-size: 16pt;
-  text-decoration: underline;
+  font-size: 18pt;
   height: 38px;
   display: inline-block;
   border: 0;
   border-radius: 0;
   color: #DDDDDD;
   background-color: transparent;
+}
+
+#search button:hover {
+  text-decoration: underline;
 }
 
 a {
@@ -73,7 +78,7 @@ a:hover {
 
 .date {
   font-size: 12pt;
-  color: #999999;
+  color: #222222;
   margin-left: 10px;
 }
 
